ninetails-be-main/infra/development/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
      annotations:
        "consul.hashicorp.com/connect-inject": 'false'
    spec:
      containers:
        - name: postgres
          args:
            - -c
            - max_connections=1000
            - -c
            - shared_buffers=1024MB
          image: 'postgis/postgis:16-3.5'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: pgadmin-deployment
spec:
  selector:
    matchLabels:
      app: pgadmin-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin-deployment
      annotations:
        "consul.hashicorp.com/connect-inject": 'false'
    spec:
      containers:
        - name: pgadmin
          image: dbeaver/cloudbeaver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8978

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: LoadBalancer
  selector:
    app: pgadmin-deployment
  ports:
    - name: http
      port: 8978
      targetPort: 8978
      protocol: TCP
