ninetails-be-main/infra/development/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: default
spec:
  parentRefs:
    - name: consul-local-gateway
      namespace: gateway-namespace
  rules:
    - backendRefs:
        - kind: Service
          name: user-api-service
      matches:
        - path:
            type: PathPrefix
            value: /api/user
    - backendRefs:
        - kind: Service
          name: master-api-service
      matches:
        - path:
            type: PathPrefix
            value: /api/auth
    - backendRefs:
        - kind: Service
          name: location-api-service
      matches:
        - path:
            type: PathPrefix
            value: /api/location
    - backendRefs:
        - kind: Service
          name: form-api-service
      matches:
        - path:
            type: PathPrefix
            value: /api/form-request
    - backendRefs:
        - kind: Service
          name: metric-api-service
      matches:
        - path:
            type: PathPrefix
            value: /api/base-metric
    - backendRefs:
        - kind: Service
          name: notification-api-service
      matches:
        - path:
            type: PathPrefix
            value: /api/notification
    - backendRefs:
        - kind: Service
          name: ninetails-fe-api-service
      matches:
        - path:
            type: PathPrefix
            value: /
